2008-01-09  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + executes commands using 'exec' (less forks)

	* cdiff.c: + supports more formats
	+ may be run as a wrapper

	* cutcom.c: + new state as a pointer to new state, not index

	* FvwmTransFocus.c, check.sh, libmpdclient.c, libmpdclient.h,
	load.c, malloc.c, mountiso.c, mpd-show.c, mpd-state.c,
	one-time-pass.sh, timer.c, tuptime.c: + better standard compatibility
	+ better portability
	+ better usage of static and inline keywords (in case of C)

2007-08-21  Michal Nazarewicz  <mina86/AT/mina86.com>

	* getlyrics.pl: + added --edit option
	+ files in cache are saved in lower case

2007-08-10  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + mpd-show was missing in all target

------- New Release ----------------------------------------------------------

2007-08-09  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + fixed doinst.sh
	+ fixed EUID variable
	+ changed ${...} with $(...) -- better backwarde compatiblity

	* Makefile: + fixed doinst.sh
	+ fixed EUID variable
	+ changed ${...} with $(...) -- better backwarde compatiblity

	* lesspipe: + help fixed
	* tpwd: + help fixed

2007-08-07  Michal Nazarewicz  <mina86/AT/mina86.com>

	* genpass.sh: + accepts one argument -- password length
	+ uses pipes instead of $(...) (new lines are not stripped now)

	* getlyrics.pl: + added audacious support
	+ added cache support

	* mountiso.c: + can be compiled not to allow mounting into default dir
	+ requires user to be ISO file and dreictory owner (more secure now)

2007-06-30  Michal Nazarewicz  <mina86/AT/mina86.com>

	* libmpdclient.c, libmpdclient.h: + updated to 0.13.0
	* FvwmTransFocus.c, infinite-logger.c, load.c, mpd-state.c,
	null.c, timer.c: + fixed some compatibility problems and cleaned code

2007-05-18  Michal Nazarewicz  <mina86/AT/mina86.com>

	* malloc.c: + checks number of arguments
	+ now ANSI C compatible

	* Makefile: + added -Wall switch to compile commands
